--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,6 +1,8 @@
+// Importando o módulo "path"
 const path = require("path");
 
+// Exportando a configuração do caminho para as migrações do banco de dados
 module.exports = {
-    config: path.resolve(__dirname, "src", "config", "database.js"),
-    "migrations-path": path.resolve(__dirname, "src", "database", "migrations"),
+  config: path.resolve(__dirname, "src", "config", "database.js"),
+  "migrations-path": path.resolve(__dirname, "src", "database", "migrations"),
 };
