--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,11 @@
+// Exportando o modelo User
+module.exports = User;
+
 // Importando o módulo "path"
 const path = require("path");
 
 // Exportando a configuração do caminho para as migrações do banco de dados
 module.exports = {
-  config: path.resolve(__dirname, "src", "config", "database.js"),
-  "migrations-path": path.resolve(__dirname, "src", "database", "migrations"),
+    config: path.resolve(__dirname, "src", "config", "database.js"), // Caminho para o arquivo de configuração do banco de dados
+    "migrations-path": path.resolve(__dirname, "src", "database", "migrations"), // Caminho para as migrações do banco de dados
 };
